src/test/deca/context/invalid/intermediaire2/mots_reserves/17this.deca
// Description:
// Test du mettre le mot réservé this, en nom de variable.
//
// Resultats:
//  17this.deca:10:8:
//
// Historique:
//    crée le 17/06/2022
{
    int this;
}